--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -88,7 +88,7 @@
         <p>Your support is greatly appreciated! Donate via Vipps:</p>
         <h2 class="vipps-number">+47 95901753</h2>
 
-        <a href="https://vipps.no" class="button" target="_blank">Send Money via Vipps</a>
+        <a href="/src/thank_you.html" class="button" target="_blank">Send Money via Vipps</a>
 
         <p>Any contribution is welcome – every cup counts!</p>
     </div>
