--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,7 +80,7 @@
 <body>
     
 
-        <a href="/src/thank_you.html" class="button" target="_blank">Trykk her!</a>
+        <a href="src/thank_you.html" class="button" target="_blank">Trykk her!</a>
 
 </body>
 </html>
